modified:   Dockerfile 	modified:   requirements.txt 	modified and renamed:    secciones/hello-world.ipynb -> secciones/01_hello_world.ipynb 	new file:   secciones/02_comentarios.ipynb 	new file:   secciones/03_tipos_de_datos.ipynb 	new file:   secciones/04_variables.ipynb 	new file:   secciones/05_palabras_reservadas.ipynb 	new file:   secciones/06_operaciones_con_str.ipynb 	new file:   secciones/07_operadores_aritmeticos.ipynb 	new file:   secciones/08_operadores_de_asignacion.ipynb 	new file:   secciones/09_operadores_logicos_y_de_comparacion.ipynb 	new file:   secciones/10_estructuras_de_datos_basicas.ipynb 	new file:   secciones/Modulos/comentarios.py 	new file:   secciones/Modulos/modulo_importable.py 	new file:   secciones/Modulos/modulo_importador.py

--- a/secciones/01_hello_world.ipynb
+++ b/secciones/01_hello_world.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "worst-tribe",
    "metadata": {},
    "source": [
     "# Hello World\n",
@@ -11,8 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "diverse-meditation",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,31 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "becoming-prompt",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Last updated: 2021-02-23T16:35:46.689580-06:00\n",
-      "\n",
-      "Python implementation: CPython\n",
-      "Python version       : 3.9.1\n",
-      "IPython version      : 7.20.0\n",
-      "\n",
-      "Compiler    : GCC 10.2.0\n",
-      "OS          : Linux\n",
-      "Release     : 5.10.15-1-MANJARO\n",
-      "Machine     : x86_64\n",
-      "Processor   : \n",
-      "CPU cores   : 8\n",
-      "Architecture: 64bit\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext watermark\n",
     "%watermark"
@@ -54,7 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "biblical-warren",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,10 +39,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stopped-genre",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Hello World!')"
+   ]
   }
  ],
  "metadata": {
@@ -86,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
