Modifico y creo nuevas secciones, modulos y txt 	modified:   requirements.txt 	modified:   secciones/01_hello_world.ipynb 	modified:   secciones/02_comentarios.ipynb 	modified:   secciones/03_tipos_de_datos.ipynb 	modified:   secciones/04_variables.ipynb 	modified:   secciones/05_palabras_reservadas.ipynb 	modified:   secciones/06_operaciones_con_str.ipynb 	modified:   secciones/07_operadores_aritmeticos.ipynb 	modified:   secciones/08_operadores_de_asignacion.ipynb 	modified:   secciones/09_operadores_logicos_y_de_comparacion.ipynb 	new file:   secciones/10_estructuras_de_datos.ipynb 	new file:   secciones/11_flujos_de_control.ipynb 	new file:   secciones/12_funciones.ipynb 	new file:   secciones/13_clases.ipynb 	new file:   secciones/14_modulos.ipynb 	renamed:    secciones/10_estructuras_de_datos_basicas.ipynb -> secciones/15_argumentos_script.ipynb 	new file:   secciones/16_buenas_practicas.ipynb 	new file:   secciones/17_iterators_y_generators.ipynb 	new file:   secciones/18_decoradores.ipynb 	new file:   secciones/19_map_and_reduce.ipynb 	new file:   secciones/20_numpy.ipynb 	new file:   secciones/21_pandas.ipynb 	new file:   secciones/CSV/numpy.txt 	new file:   secciones/Modulos/argumentos_script.py 	modified:   secciones/Modulos/comentarios.py 	modified:   secciones/Modulos/modulo_importable.py 	modified:   secciones/Modulos/modulo_importador.py

--- a/secciones/01_hello_world.ipynb
+++ b/secciones/01_hello_world.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Hello World\n",
-    "> Davd Quintanar Pérez"
+    "> David Quintanar Pérez"
    ]
   },
   {
