--- a/secciones/03_tipos_de_datos.ipynb
+++ b/secciones/03_tipos_de_datos.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Tipos de datos\n",
-    "> Davd Quintanar Pérez"
+    "> David Quintanar Pérez"
    ]
   },
   {
