--- a/secciones/06_operaciones_con_str.ipynb
+++ b/secciones/06_operaciones_con_str.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Operaciones con str\n",
-    "> Davd Quintanar Pérez"
+    "> David Quintanar Pérez"
    ]
   },
   {
@@ -207,6 +207,39 @@
     "headers = \"nombre|apellido|edad\"\n",
     "\n",
     "headers.split(\"|\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(lenguaje)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Acceder a elementos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [inicio:final-1:orden]\n",
+    "lenguaje[0]"
    ]
   },
   {
