--- a/secciones/07_operadores_aritmeticos.ipynb
+++ b/secciones/07_operadores_aritmeticos.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Operadores aritméticos\n",
-    "> Davd Quintanar Pérez"
+    "> David Quintanar Pérez"
    ]
   },
   {
@@ -85,14 +85,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height: 2px; background-color: blue;\">"
+    "## Buenas practicas"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Buenas practicas"
+    "1 + 2 * 3 / 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 + (2*3 / 4)"
    ]
   },
   {
