--- a/secciones/08_operadores_de_asignacion.ipynb
+++ b/secciones/08_operadores_de_asignacion.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Operadores de asignación\n",
-    "> Davd Quintanar Pérez"
+    "> David Quintanar Pérez"
    ]
   },
   {
