--- a/secciones/12_funciones.ipynb
+++ b/secciones/12_funciones.ipynb
@@ -4,15 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variables\n",
+    "# Funciones\n",
     "> David Quintanar Pérez"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## str"
+    "def saludar():\n",
+    "    print(\"Hola Mundo!\")"
    ]
   },
   {
@@ -21,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hola_mundo = \"Hola Mundo!\""
+    "type(saludar)"
    ]
   },
   {
@@ -30,32 +33,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hola_mundo = 'Hola Mundo!'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hola_mundo = \"\"\"Hola Mundo!\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hola_mundo = '''Hola Mundo!'''"
+    "saludar()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## int"
+    "## Con argumentos"
    ]
   },
   {
@@ -64,14 +49,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edad = 26"
+    "def saludar_personalizado(nombre):\n",
+    "    print(\"Hola {}!\".format(nombre))\n",
+    "    \n",
+    "saludar_personalizado(\"David\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saludar_personalizado(nombre=\"Mundo\"):\n",
+    "    print(\"Hola {}!\".format(nombre))\n",
+    "    \n",
+    "saludar_personalizado()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saludar_personalizado(nombre=\"Mundo\"):\n",
+    "    print(\"Hola {}!\".format(nombre))\n",
+    "    \n",
+    "saludar_personalizado(nombre=\"David\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## float"
+    "## Devolver un valor"
    ]
   },
   {
@@ -80,14 +92,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importe = 100000000000000000000.00"
+    "def suma(numero_uno, numero_dos):\n",
+    "    suma_numeros = numero_uno + numero_dos\n",
+    "    return suma_numeros\n",
+    "\n",
+    "suma(5,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def suma(numero_uno, numero_dos):\n",
+    "    return numero_uno + numero_dos\n",
+    "\n",
+    "suma(5,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def suma(numero_uno, numero_dos):\n",
+    "    return suma_numeros\n",
+    "    suma_numeros = numero_uno + numero_dos\n",
+    "\n",
+    "suma(5,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def suma(numero_uno, numero_dos):\n",
+    "    suma_numeros = numero_uno + numero_dos\n",
+    "    return suma_numeros\n",
+    "\n",
+    "suma_retorno = suma(5,5)\n",
+    "suma_retorno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def suma(numero_uno, numero_dos):\n",
+    "    suma_numeros = numero_uno + numero_dos\n",
+    "    resta_numeros = numero_uno - numero_dos\n",
+    "    return suma_numeros, resta_numeros\n",
+    "\n",
+    "suma(5,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def suma(numero_uno, numero_dos):\n",
+    "    suma_numeros = numero_uno + numero_dos\n",
+    "    resta_numeros = numero_uno - numero_dos\n",
+    "    return suma_numeros, resta_numeros\n",
+    "\n",
+    "suma_retorno, resta_retorno = suma(5,5)\n",
+    "print(suma_retorno, resta_retorno)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## complex"
+    "## lambda\n",
+    "nombre_funcion_lambda = lambda input: output"
    ]
   },
   {
@@ -96,14 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coordenadas = 0 + 0j"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## bool"
+    "suma_lambda = lambda numero_uno, numero_dos: numero_uno + numero_dos"
    ]
   },
   {
@@ -112,147 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "es_mayor = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "es_interesante = False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## bytes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b_hola_mundo = b\"Hola Mundo!\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "estrellas = [0, 1, 2, 4, 5]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## tuple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "registros = (0, 1, 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## range"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rango_de_alumnos = range(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "compras_amazon = {0: \"echo dot\", 1: \"echo show\", 2: \"kindle\"}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cursos_bluetab = {\"Scala y spark (teoría)\",\"Scala y spark (práctica)\", \"Python\"}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr style=\"height: 2px; background-color: blue;\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Cambio de tipo de dato"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\n",
-    "    \"\"\"\n",
-    "    variable = str(dato)\n",
-    "    variable = int(dato)\n",
-    "    variable = float(dato)\n",
-    "    variable = complex(dato)\n",
-    "    variable = bool(dato)\n",
-    "    variable = bytes(dato)\n",
-    "    variable = list(dato)\n",
-    "    variable = dict(dato)\n",
-    "    variable = set(dato)\n",
-    "    \"\"\"\n",
-    "    )"
+    "suma_lambda(5,5)"
    ]
   },
   {
