--- a/secciones/13_clases.ipynb
+++ b/secciones/13_clases.ipynb
@@ -4,121 +4,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comentarios\n",
+    "# Clases\n",
     "> David Quintanar Pérez"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## De línea"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Comentario de una línea"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## De multilínea"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Comentario\n",
-    "# Multilínea"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Comentario\n",
-    "Multilínea\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Comentario\n",
-    "Multilínea\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## De funciones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def saludar():\n",
-    "    \"\"\"\n",
-    "    Función saludar\n",
-    "    Hola Mundo!\n",
-    "    \"\"\"\n",
-    "    print(\"Hola Mundo!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "saludar.__doc__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## De clases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Saludo:\n",
-    "    \"\"\"\n",
-    "    Clase Saludo\n",
-    "    Hola Mundo!\n",
-    "    \"\"\"\n",
-    "    def saludar(self):\n",
+    "class Mensaje:\n",
+    "    def __init__(self, saludo):\n",
+    "        self.__despedida = \"Bye Bye\"\n",
+    "        self.saludo = saludo\n",
+    "        print(\"Inicializado\")\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return self.describir()\n",
+    "    \n",
+    "    def describir(self):\n",
+    "        descripcion = \"\"\"\n",
+    "        Esta es una descripcion desde el metodo describir que se enviara a __repr__\n",
     "        \"\"\"\n",
-    "        Método Saludo\n",
-    "        Hola Mundo!\n",
+    "        return descripcion\n",
+    "    \n",
+    "    def saludar(self, nombre=\"Mundo\"):\n",
+    "        print(\"{} {}!\".format(self.saludo, nombre))\n",
+    "        self.__pregunta()\n",
+    "        \n",
+    "    def __pregunta(self):\n",
+    "        print(\"Como estas?\")\n",
+    "        \n",
+    "    def __del__(self): \n",
+    "        print(self.__despedida)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mensajito = Mensaje(saludo=\"Hola\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mensajito"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mensajito.saludar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mensajito.saludar(nombre=\"David\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mensajito.pegunta()\n",
+    "mensajito.__pegunta()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mensaje_dos = Mensaje(saludo=\"Hola\")\n",
+    "del mensaje_dos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Correo(Mensaje):\n",
+    "    \n",
+    "    def __init__(self, *args, **kwargs):\n",
     "        \"\"\"\n",
-    "        print(\"Hola Mundo!\")"
+    "        *args **kwargs son los argumentos que tienen keywords, es decir que tienen nombre y los argumentos posicionales, los args.\n",
+    "        Los asteriscos son simplemente una expansión.\n",
+    "        \"\"\"\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        \n",
+    "    def describir(self):\n",
+    "        descripcion = \"\"\"\n",
+    "        Clase Correo\n",
+    "        \"\"\"\n",
+    "        return descripcion\n",
+    "    \n",
+    "    def cambiar_saludo(self, saludo_nuevo=\"Hola\"):\n",
+    "        self.saludo = saludo_nuevo"
    ]
   },
   {
@@ -127,14 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Saludo.__doc__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## De métodos"
+    "correito = Correo(saludo=\"Hola\")"
    ]
   },
   {
@@ -143,14 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Saludo.saludar.__doc__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## De objetos"
+    "correito"
    ]
   },
   {
@@ -159,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saludito = Saludo()"
+    "correito.cambiar_saludo(saludo_nuevo=\"Que ondita\")"
    ]
   },
   {
@@ -168,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saludito.__doc__"
+    "correito.saludo"
    ]
   },
   {
@@ -177,54 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saludito.saludar.__doc__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## De módulos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from Modulos import comentarios as com\n",
-    "# from Modulos import comentarios\n",
-    "import Modulos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# com.__doc__\n",
-    "# comentarios.__doc__\n",
-    "Modulos.comentarios.__doc__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## help"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# help(com)\n",
-    "# help(comentarios)\n",
-    "help(Modulos.comentarios)"
+    "correito.saludar()"
    ]
   },
   {
