--- a/secciones/14_modulos.ipynb
+++ b/secciones/14_modulos.ipynb
@@ -4,16 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Estructuras de datos básicas\n",
-    "> Davd Quintanar Pérez"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Listas\n",
-    "Los objetos tipo list son colecciones ordenadas de objetos, los cuales son indexables numéricamente y son mutables."
+    "# Módulos\n",
+    "> David Quintanar Pérez"
    ]
   },
   {
@@ -21,14 +13,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Tuplas\n",
-    "Los objetos tipo tuple son colecciones ordenadas de objetos, los cuales son indexables numéricamente e inmutables."
+    "%run Modulos/modulo_importador.py"
    ]
   },
   {
@@ -36,14 +22,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Diccionarios\n",
-    "El tipo dict es una colección mutable de pares <clave>:<valor>, el cual es indexable mediante la clave de cada elemento."
+    "%run Modulos/modulo_importable.py"
    ]
   },
   {
