--- a/secciones/15_argumentos_script.ipynb
+++ b/secciones/15_argumentos_script.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Palabras reservadas\n",
+    "# Argumentos script\n",
     "> David Quintanar Pérez"
    ]
   },
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help(\"keywords\")"
+    "%run Modulos/argumentos_script.py"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir(__builtins__)"
+    "%run Modulos/argumentos_script.py -h"
    ]
   },
   {
@@ -32,14 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"zip\" in dir(__builtins__)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr style=\"height: 2px; background-color: blue;\">"
+    "%run Modulos/argumentos_script.py casual david"
    ]
   },
   {
@@ -48,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"nombre\" in dir()"
+    "%run Modulos/argumentos_script.py formal david"
    ]
   },
   {
@@ -57,62 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre = \"David\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"nombre\" in dir()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr style=\"height: 2px; background-color: blue;\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "id(nombre)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nombre_repetido = nombre\n",
-    "id(nombre)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Eliminar del espacio de nombre\n",
-    "del(nombre)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gc\n",
-    "collected = gc.collect()"
+    "%run Modulos/argumentos_script.py casual david --capitalizar\n",
+    "%run Modulos/argumentos_script.py formal david --capitalizar"
    ]
   },
   {
