--- a/secciones/17_iterators_y_generators.ipynb
+++ b/secciones/17_iterators_y_generators.ipynb
@@ -4,27 +4,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Operadores lógico y de comparación\n",
+    "# Iterators y Generators\n",
     "> David Quintanar Pérez"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterators\n",
+    "Un iterator es un objeto que cumple con los requisitos del Iteration Protocol (protocolo de iteración) y por lo tanto puede ser utilizado en ciclos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "uno = 1\n",
-    "dos = 2\n",
-    "tres = 3\n",
-    "cuatro = 4"
+    "nombres_perros = (\"jacob\", \"ritchie\", \"piglet\", \"blacky\", \"boopi\", \"rocket\")\n",
+    "perros = iter(nombres_perros)\n",
+    "\n",
+    "print(next(perros))\n",
+    "print(next(perros))\n",
+    "print(next(perros))\n",
+    "print(next(perros))\n",
+    "print(next(perros))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(next(perros))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(next(perros))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operadores de lógico"
+    "## Generators\n",
+    "Los generators son simplemente una forma rápida de crear iterables sin la necesidad de declarar una clase que implemente el protocolo de iteración. "
    ]
   },
   {
@@ -33,7 +64,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uno == dos"
+    "def fibonacci(max):\n",
+    "    a, b = 0, 1\n",
+    "    while a < max:\n",
+    "        yield a\n",
+    "        a, b = b, a+b"
    ]
   },
   {
@@ -42,7 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uno != dos"
+    "fib1 = fibonacci(20)\n",
+    "fib1"
    ]
   },
   {
@@ -51,41 +87,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uno > dos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uno < dos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uno >= dos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uno <= dos"
+    "fib_nums = [num for num in fib1]\n",
+    "fib_nums"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operadores de comparación"
+    "| iter | a  | b  |\n",
+    "| ---- | -- | -  |\n",
+    "|  1   | 0  | 1  |\n",
+    "|  2   | 1  | 1  |\n",
+    "|  3   | 1  | 2  |\n",
+    "|  4   | 2  | 3  |\n",
+    "|  5   | 3  | 5  |\n",
+    "|  6   | 5  | 8  |\n",
+    "|  7   | 8  | 13 |\n",
+    "|  8   | 13 | 21 |\n",
+    "|  9   | 21 |    |"
    ]
   },
   {
@@ -94,7 +114,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uno < dos and tres > cuatro"
+    "double_fib_nums = [num * 2 for num in fib1] # no va a funcionar\n",
+    "double_fib_nums"
    ]
   },
   {
@@ -103,25 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uno < dos or tres > cuatro"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "not(uno < dos and tres > cuatro)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "not(uno < dos or tres > cuatro)"
+    "double_fib_nums = [num * 2 for num in fibonacci(30)] # sí funciona\n",
+    "double_fib_nums"
    ]
   },
   {
