--- a/secciones/19_map_and_reduce.ipynb
+++ b/secciones/19_map_and_reduce.ipynb
@@ -4,27 +4,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Operadores lógico y de comparación\n",
+    "# map() and reduce()\n",
     "> David Quintanar Pérez"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## map()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "uno = 1\n",
-    "dos = 2\n",
-    "tres = 3\n",
-    "cuatro = 4"
+    "zelda_games = [\"ocarina of time\", \"majora's mask\", \"breath of the wild\", \"twilight princess\", \"wind waker\", \"skyward sword\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_tloz(game):\n",
+    "    return \"The Legend of Zelda {}\".format(game)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tloz_games = map(add_tloz, zelda_games)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tloz_games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(tloz_games)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operadores de lógico"
+    "## reduce()"
    ]
   },
   {
@@ -33,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uno == dos"
+    "from functools import reduce"
    ]
   },
   {
@@ -42,86 +83,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uno != dos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uno > dos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uno < dos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uno >= dos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uno <= dos"
+    "numbers = range(10)\n",
+    "\n",
+    "reduce(lambda x, y: x+y, [1, 2, 3, 4, 5])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operadores de comparación"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uno < dos and tres > cuatro"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uno < dos or tres > cuatro"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "not(uno < dos and tres > cuatro)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "not(uno < dos or tres > cuatro)"
+    "## map(), filter(), reduce(), sum(), len(), any(), all(), min(), max()"
    ]
   },
   {
